--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 LRC/TME/LoTREC_2.0/
 Androide M1-20220614T170217Z-001.zip
 **/*Zone.Identifier
+MLBDA/Fiches/Cheat_sheet_SQL.pdf
+Recapitulatif RES-20211210T163028Z-001.zip
