ignore sujet tme bima trop lourd

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Androide M1-20220614T170217Z-001.zip
 **/*Zone.Identifier
 MLBDA/Fiches/Cheat_sheet_SQL.pdf
 Recapitulatif RES-20211210T163028Z-001.zip
+BIMA/Sujet TME/TME8data.tgz
