ignore td pas à moi

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ MLBDA/Fiches/Cheat_sheet_SQL.pdf
 Recapitulatif RES-20211210T163028Z-001.zip
 BIMA/Sujet TME/TME8data.tgz
 BIMA/TD/BIMA_TD.pdf
+LRC/TD/TD_autre_personne
